# nssm

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Dockerfile.base  Dockerfile.ml-base  MARIADB_SETUP.md  NORDNET_SCRAPER.md  README.md  alembic.ini  caleDB service from docker-compose.yml  cypress.config.js  debug_db.py  docker-compose.mariadb.yml  docker-compose.yml  e build --help  env-template.env  env.example  fix_posts_table.py  mariadb-config.env  market_test.db  pyproject.analytics.toml  pyproject.dashboard.toml  pyproject.market.toml  pyproject.minimal.toml  pyproject.nlp.toml  pyproject.scraper.toml  pyproject.toml  pytest.ini  show_results.py  tatus  test_complete_scraping.py  test_ensu_nordnet.py  test_ensu_scraping_only.py  test_market_data.db  test_nordnet_scraper.py  test_nordnet_updated.py  test_openbb_simple.py  test_placera_scraper.py
.streamlit/: config.toml
.taskmaster/: config.json  state.json
alembic/: env.py
analytics/: Dockerfile  __init__.py  __main__.py  aggregator.py  scheduler.py
config/: __init__.py  markets.yml
cypress/: README.md
dashboard/: __init__.py  app.py  data.py
db/: README.md  __init__.py  init_db.py  models.py  seeds.py
docker/: README.md
forums-html/: Finansavisen Forum-index.html  Finansavisen Forum-thread.html  Placera Forum.html
market/: Dockerfile  __init__.py  __main__.py  announcements.py  data.py  news_openbb.py  scheduler.py  state_management.py
nlp/: Dockerfile  Dockerfile.standalone  __init__.py  __main__.py  db_io.py  infer.py  lang_detect.py  model.py  preprocess.py
scraper/: Dockerfile  __init__.py  __main__.py  avanza.py  base.py  hegnar.py  nordnet.py  oslobors.py  persistence.py
scripts/: PRD.txt  entrypoint-analytics.sh  entrypoint-market.sh  entrypoint-nlp.sh  entrypoint-scraper.sh  run_analytics_scheduler.sh  run_cypress_tests.sh  setup-unraid-directories.sh  setup-unraid-storage.sh  setup_db.sh  start-scraper.sh  test-orchestration.sh
tests/: __init__.py  test_analytics_aggregator.py  test_analytics_cli.py  test_db_models.py  test_market_prices.py  test_nlp_db_io.py  test_nlp_infer.py  test_nlp_lang_detect.py  test_nlp_model.py  (+3 more)
(+33 files in other folders)
